--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,30 +71,43 @@ li{
 }
 
 #battle{
-    position: absolute;
-    
-    margin:500px auto auto 300px;
+    background-color: greenyellow;
+    border: 5px solid white;
+    width: auto;
+    height: 25px;
+    position: absolute; 
+    margin:450px auto auto 50px;
+    text-align: center;
+    vertical-align: center;
+    line-height: 25px;
+    font-family: 'Gloria Hallelujah', sans-serif;
+    color:black;
+    padding:10px;
 }
 
 #battleBox{
-    width: 550px;
+    width: auto;
     height: 100px;
     position: absolute;
     margin: 550px auto auto 50px;
     background-color:rgba(231, 214, 187, 0);
-    z-index: 6;
+    font-family: 'Gloria Hallelujah', sans-serif;
+    font-size:24px;
    
 }
 
 #battleBox2{
     width: 550px;
-    height: 100px;
+    height: 50px;
     position: absolute;
-    margin: 550px auto auto 50px;
+    margin: 325px auto auto 50px;
     background-color:rgba(231, 214, 187, 0);
-    z-index: 6;
+    text-align: center;
+    font-family: 'Gloria Hallelujah', sans-serif;
+    font-size:24px;
    
 }
+
 
 
 
